fix login width on mobile

--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -50,6 +50,7 @@
 
     #login {
         width: 400px;
+        max-width: 100%;
         margin: auto;
 
         form {
